@@ -1,3 +1,11 @@
+2005-06-24  Stefan Kost  <ensonic@users.sf.net>
+
+	* HACKING:
+          how to upload changed files
+	* src/htdocs/dev/index.xml:
+          added link to bugzilla
+          added section about buildbots
+
 2005-06-17  Thomas Vander Stichele  <thomas at apestaart dot org>
 
 	* bin/yum-rep:
